--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@reduxjs/toolkit": "1.5.0",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
-    "firebase-admin": "^9.8.0",
+    "@reduxjs/toolkit": "1.8.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
     "next": "latest",
-    "react": "17.0.1",
+    "next-auth": "^4.2.1",
+    "react": "17.0.2",
     "react-currency-format": "^1.1.0",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.6",
     "react-responsive-carousel": "^3.2.23"
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
