--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "1.8.0",
+    "@stripe/stripe-js": "^1.24.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "firebase": "^9.6.8",
     "firebase-admin": "^10.0.2",
@@ -18,7 +19,8 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^8.208.0"
   },
   "license": "MIT",
   "devDependencies": {
